# YOLOv5-Lite-TfLite

./: .gitignore  calibration_image_sample_data_20x128x128x3_float32.npy  export.py  export_tflite.py  export_vela.sh  requirements.txt  train.py
cpp_demo/tflite_delegate/: CMakeLists.txt  Makefile  main.cpp  yolov5_lite_tflite.cpp  yolov5_lite_tflite.h
models/: common.py  experimental.py
output/: best_full_integer_quant_summary_Ethos_U65_Client_Server.csv  best_full_integer_quant_summary_Ethos_U65_High_End.csv  best_full_integer_quant_vela.tflite
runs/train/exp/: events.out.tfevents.1780992220.qingyu-server.23312.0  opt.yaml
runs/train/exp10/: events.out.tfevents.1780993925.qingyu-server.25014.0  opt.yaml
runs/train/exp11/: events.out.tfevents.1780993955.qingyu-server.25353.0  opt.yaml
runs/train/exp12/: events.out.tfevents.1780994960.qingyu-server.32390.0  opt.yaml
runs/train/exp13/: events.out.tfevents.1780995269.qingyu-server.33221.0  opt.yaml  results.txt
runs/train/exp14/: events.out.tfevents.1780998396.qingyu-server.44373.0  opt.yaml
runs/train/exp15/: events.out.tfevents.1780998429.qingyu-server.44667.0  opt.yaml  results.txt
runs/train/exp16/: events.out.tfevents.1780998577.qingyu-server.46513.0  opt.yaml
runs/train/exp17/: events.out.tfevents.1780998675.qingyu-server.47160.0  opt.yaml  results.txt
runs/train/exp18/: events.out.tfevents.1781061300.qingyu-server.115582.0  opt.yaml  results.txt
runs/train/exp2/: events.out.tfevents.1780992264.qingyu-server.23382.0  opt.yaml
runs/train/exp3/: events.out.tfevents.1780992299.qingyu-server.23463.0  opt.yaml
runs/train/exp4/: events.out.tfevents.1780992323.qingyu-server.23555.0  opt.yaml
runs/train/exp5/: events.out.tfevents.1780992477.qingyu-server.23665.0  opt.yaml
runs/train/exp6/: events.out.tfevents.1780993764.qingyu-server.24261.0  opt.yaml
runs/train/exp7/: opt.yaml  (+1 more)
utils/: datasets.py  general.py  loss.py  metrics.py
v5lite-s_saved_model/: fingerprint.pb  v5lite-s_float16.tflite  v5lite-s_full_integer_quant.tflite  v5lite-s_int8.tflite  v5lite-s_integer_quant.tflite
v5lite-s_saved_model/variables/: variables.data-00000-of-00001  variables.index
(+26 files in other folders)
